@@ -1,3 +1,11 @@
+2002-01-02  Frederic Crozat  <fcrozat@mandrakesoft.com>
+
+	* libnautilus-private/nautilus-directory-background.c:
+	(initialize_background_from_settings): Remove flash when
+ 	Nautilus desktop is started with a pixmap background
+	
+	* src/nautilus-desktop-window.c: (map): Remove unneeded variable
+
 2001-12-18  Michael Meeks  <michael@ximian.com>
 
 	* components/hardware/nautilus-hardware-view.c
